fixes: image border radius on mobile

--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -51,6 +51,8 @@
     position: absolute;
     top: 0px;
     left: 0px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
     border-radius: 8px;
 }
 
